cheese/cheese-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cheese
spec:
  rules:
  - host: stilton.34.105.75.153.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: stilton
          servicePort: http
  - host: cheddar.34.105.75.153.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: cheddar
          servicePort: http
  - host: wensleydale.34.105.75.153.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: wensleydale
          servicePort: http
